--- a/frontend/components/sections/header/Header.module.css
+++ b/frontend/components/sections/header/Header.module.css
@@ -4,16 +4,16 @@
 
 .header {
   width: 100%;
+  max-width: 1366px;
   height: 108px;
   min-height: 108px;
-  padding: 0 1.5vw;
+  margin: 0 auto;
+  padding: 0;
 }
 
 .headerInner {
   width: 100%;
-  max-width: 1350px;
   min-height: 108px;
-  margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   align-items: center;
